# nok

./: .env.example  .gitignore  BDD_E2E_TESTING_GUIDE.md  CLAUDE.md  Cargo.toml  LICENSE  README.md  README_MATRIX.md  cucumber.js  id_mappings.json  migration_mappings_1749051516.json  migration_report_1749051516.md
backend/: README-uv.md  README.md  main.py  nok.db  pyproject.toml  requirements.txt  setup_data.py
backend/app/: __init__.py  database.py  event_dispatcher.py  models.py  websocket_manager.py
backend/app/routers/: messages.py  rooms.py  users.py
backend/conduit/: .env.example  .gitignore  conduit.toml  conduit.toml.template  download_conduit.sh  start_conduit.sh
backend/conduit/database/: IDENTITY  LOG  LOG.old.1749047249785065  MANIFEST-000009  OPTIONS-000181  OPTIONS-000183
docs/: README.md
docs/00_overview/: README.md  project_overview.md  project_overview_ja.md
docs/05_instructions/: README.md  make-design-doc.md  make-specification.md  make-task.md
docs/10_architecture/: README.md  backend_architecture.md
docs/10_architecture/adr/: README.md
docs/20_domain/: README.md
docs/30_features/: README.md
docs/40_api/: README.md
docs/50_db/: README.md
docs/60_uiux/: README.md  multi_pane_layout.md
docs/70_tests/: README.md
docs/80_manual/: README.md
docs/90_best_practices/: README.md  database_design_docs.md  development.md  git.md  pull_request.md
docs/99_misc/: README.md
examples/: matrix_test.rs  migration_test.rs
features/: todo_management.feature  user_management.feature
features/step_definitions/: todo_steps.js  user_steps.js
features/support/: world.js
frontend-ink/: .eslintrc.js  .gitignore  README.md  package.json  tsconfig.json
frontend-ink/src/: index.tsx
frontend-ink/src/components/: App.tsx  LoginScreen.tsx  MainScreen.tsx  SettingsScreen.tsx
frontend-ink/src/components/panes/: MessagesPane.tsx  RoomsPane.tsx  StatusPane.tsx  UsersPane.tsx
frontend-ink/src/hooks/: useMatrix.ts
frontend-ink/src/store/: appStore.ts
frontend-ink/src/types/: index.ts
frontend-ink/src/utils/: matrixClient.ts
reports/: cucumber-report.html  cucumber-report.json
scripts/: run-tests.js
src/: app.js  lib.rs  main.rs
src/api/: client.rs  mod.rs  websocket.rs
src/app/: app_new.rs  config.rs  core.rs  legacy_state.rs  matrix_state.rs  message.rs  mod.rs  room.rs  state.rs  state_manager.rs  unified_config.rs  user.rs
src/audio/: mod.rs
src/matrix/: client.rs  events.rs  mod.rs  presence.rs
src/migration/: command.rs  config.rs  converter.rs  legacy.rs  mod.rs
src/pages/: HomePage.js
src/ui/: mod.rs
src/util/: error.rs  mod.rs  validation.rs
tests/: app_test.rs  matrix_integration_test.sh
