[package]
name = "nok"
version = "0.1.0"
edition = "2021"
authors = ["Devin AI"]
description = "A terminal-based virtual office application"

[dependencies]
ratatui = { version = "0.26.0", features = ["all-widgets"] }
crossterm = "0.27.0"
rodio = "0.17.3"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
chrono = { version = "0.4", features = ["serde"] }
rand = "0.8"
reqwest = { version = "0.11", features = ["json"], default-features = false }
tokio = { version = "1.0", features = ["full"] }
tokio-tungstenite = "0.20"
futures-util = "0.3"
uuid = { version = "1.0", features = ["v4", "serde"] }
dirs = "5.0"
