[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["app"]

[project]
name = "nok-backend"
version = "0.1.0"
description = "NOK Backend API"
readme = "README.md"
license = {text = "MIT"}
requires-python = ">=3.9"
dependencies = [
    "fastapi==0.104.1",
    "uvicorn[standard]==0.24.0",
    "websockets==12.0",
    "sqlalchemy==2.0.23",
    "alembic==1.12.1",
    "redis==5.0.1",
    "pydantic==2.5.0",
    "python-multipart==0.0.6",
    "aiosqlite==0.19.0",
    "python-json-logger==2.0.7",
    "greenlet>=2.0.1",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.0.0",
    "pytest-asyncio>=0.21.0",
    "ruff>=0.1.0",
]



[tool.uv]
dev-dependencies = [
    "pytest>=7.0.0",
    "pytest-asyncio>=0.21.0",
    "ruff>=0.1.0",
]

[tool.ruff]
# Ruffの基本設定
line-length = 88
target-version = "py39"

[tool.ruff.lint]
# 有効にするルール
select = [
    "E",    # pycodestyle errors
    "W",    # pycodestyle warnings
    "F",    # pyflakes
    "I",    # isort
    "B",    # flake8-bugbear
    "C4",   # flake8-comprehensions
    "UP",   # pyupgrade
]

# 無視するルール
ignore = [
    "E501",  # line too long (88文字制限はformatterが処理)
    "B008",  # function-call-argument-default
]

# フォーマッタ設定
[tool.ruff.format]
quote-style = "double"
indent-style = "space"
skip-magic-trailing-comma = false
line-ending = "auto"